--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -309,8 +309,8 @@ We will have one exam during the semester and one final exam during finals week.
 | [5](#section5)   | T       | 09/09    | Statistical Programming in `R`                                               | Ch 4                                |                                       |
 | [6](#section6)   | Th      | 09/11    | Basic Statistics                                                             | Ch 8–9                              | **Blog article 1 due!**               |
 | [7](#section7)   | T       | 09/16    | Data Visualization and Interpretation                                        | Ch 5; Schwabish (2021)              |                                       |
-| [8](#section8)   | Th      | 09/18    | Correlation Analysis                                                         | Ch 10                               | **Blog article 2 due!**               |
-| [9](#section9)   | T       | 09/23    | Multiple Regression and Mixed Models (**MOVE MIXED MODELS TO SEPARATE CLASS**) | Ch 11–12; Osborne & Waters (2002); Brauer & Kurtin (2018) |                 |
+| [8](#section8)   | Th      | 09/18    | Correlation Analysis                                                         | Ch 10; Goodwin & Leech (2006)       | **Blog article 2 due!**               |
+| [9](#section9)   | T       | 09/23    | Multiple Regression and Mixed Models (**MOVE MIXED MODELS TO SEPARATE CLASS**) | Ch 11–12; Osborne & Waters (2002); Brauer & Kurtin (2018) |               |
 | [10](#section10) | Th      | 09/25    | Causal Inference                                                             | Ch 13; D'Onofrio et al. (2020)      | **Blog article 3 due!**               |
 | [11](#section11) | T       | 09/30    | Heuristics and Cognitive Biases in Prediction                                | Ch 14; Tversky & Kahneman (1974)    |                                       |
 | [12](#section12) | Th      | 10/02    | Human Judgment vs Actuarial Approaches to Prediction                         | Ch 15; Grove et al. (2000)          | **Blog article 4 due!**               |
