--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -305,7 +305,7 @@ We will have one exam during the semester and one final exam during finals week.
 | [1](#section1)   | T       | 08/26    | Overview of Class; Overview of Fantasy Football                              | Ch 1–2                              |                                       |
 | [2](#section2)   | Th      | 08/28    | Statistical Programming: Using `R` for Statistical Analysis                  | Ch 3                                |                                       |
 | [3](#section3)   | T       | 09/02    | Player Evaluation                                                            | Ch 6; Den Hartigh et al. (2018)     | **Set up blog; post welcome article** |
-| [4](#section4)   | Th      | 09/04    | The Draft                                                                    | Ch 7                                |                                       |
+| [4](#section4)   | Th      | 09/04    | The Draft                                                                    | Ch 7; Lee & Liu (2022)              |                                       |
 | [5](#section5)   | T       | 09/09    | Statistical Programming in `R`                                               | Ch 4                                |                                       |
 | [6](#section6)   | Th      | 09/11    | Basic Statistics                                                             | Ch 8–9                              | **Blog article 1 due!**               |
 | [7](#section7)   | T       | 09/16    | Data Visualization and Interpretation                                        | Ch 5; Schwabish (2021)              |                                       |
