--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -315,29 +315,29 @@ We will have one exam during the semester and one final exam during finals week.
 | [6](#section6)   | Th      | 09/11    | Basic Statistics                                                             | Ch 8–9                              | **Blog article 1 due!**               |
 | [7](#section7)   | T       | 09/16    | Data Visualization and Interpretation                                        | Ch 5; Schwabish (2021)              |                                       |
 | [8](#section8)   | Th      | 09/18    | Correlation Analysis                                                         | Ch 10; Goodwin & Leech (2006)       | **Blog article 2 due!**               |
-| [9](#section9)   | T       | 09/23    | Multiple Regression and Mixed Models (**MOVE MIXED MODELS TO SEPARATE CLASS**) | Ch 11–12; Osborne & Waters (2002); Brauer & Kurtin (2018) |               |
-| [10](#section10) | Th      | 09/25    | Causal Inference                                                             | Ch 13; D'Onofrio et al. (2020)      | **Blog article 3 due!**               |
-| [11](#section11) | T       | 09/30    | Heuristics and Cognitive Biases in Prediction                                | Ch 14; Tversky & Kahneman (1974)    |                                       |
-| [12](#section12) | Th      | 10/02    | Human Judgment vs Actuarial Approaches to Prediction                         | Ch 15; Grove et al. (2000)          | **Blog article 4 due!**               |
-| [13](#section13) | T       | 10/07    | Base Rates                                                                   | Ch 16                               |                                       |
-| [14](#section14) | Th      | 10/09    | **Midterm Exam**                                                             |                                     |                                       |
-| [15](#section15) | T       | 10/14    | Evaluation of Prediction/Forecasting Accuracy: Binary Classification         | Ch 17 (Section 17.1–17.16.5)        |                                       |
-| [16](#section16) | Th      | 10/16    | Evaluation of Prediction/Forecasting Accuracy: Binary Classification         | Ch 17 (Section 17.6.6–17.6.8)       |                                       |
-| [17](#section17) | T       | 10/21    | Evaluation of Prediction/Forecasting Accuracy: Continuous Outcomes           | Ch 17 (Section 17.7–end of chapter) | **Blog article 5 due!**               |
-| [18](#section18) | Th      | 10/23    | Calibration Accuracy: Overconfidence Bias                                    | Kahneman & Tversky (1996); Massey & Thaler (2013) |                         |
-| [19](#section19) | T       | 10/28    | Mythbusters: Putting Fantasy Football Beliefs/Anecdotes to the Test          | Ch 18; White & Sheldon (2014)       | **Blog article 6 due!**               |
-| [20](#section20) | Th      | 10/30    | Machine Learning                                                             | Ch 19                               |                                       |
-| [21](#section21) | T       | 11/04    | Modern Portfolio Theory                                                      | Ch 20                               | **Blog article 7 due!**               |
-| [22](#section22) | Th      | 11/06    | Cluster Analysis                                                             | Ch 21                               |                                       |
-| [23](#section23) | T       | 11/11    | Factor Analysis                                                              | Ch 22                               | **Blog article 8 due!**               |
-| [24](#section24) | Th      | 11/13    | Data Reduction: Principal Component Analysis                                 | Ch 23                               |                                       |
-| [25](#section25) | T       | 11/18    | Simulation and the Monte Carlo Method                                        | Ch 24                               | **Blog article 9 due!**               |
-| [26](#section26) | Th      | 11/20    | Time Series Analysis                                                         | Ch 25                               |                                       |
+| [9](#section9)   | T       | 09/23    | Multiple Regression and Mixed Models                                         | Ch 11–12; Osborne & Waters (2002)   |                                       |
+| [10](#section10) | Th      | 09/25    | Mixed Models                                                                 | Ch 13; Brauer & Kurtin (2018)       |                                       |
+| [11](#section11) | T       | 09/30    | Causal Inference                                                             | Ch 13; D'Onofrio et al. (2020)      | **Blog article 3 due!**               |
+| [12](#section12) | Th      | 10/02    | Heuristics and Cognitive Biases in Prediction                                | Ch 14; Tversky & Kahneman (1974)    |                                       |
+| [13](#section13) | T       | 10/07    | Human Judgment vs Actuarial Approaches to Prediction                         | Ch 15; Grove et al. (2000)          |                                       |
+| [14](#section14) | Th      | 10/09    | Base Rates                                                                   | Ch 16                               | **Blog article 4 due!**               |
+| [15](#section15) | T       | 10/14    | **Midterm Exam**                                                             |                                     |                                       |
+| [16](#section16) | Th      | 10/16    | Evaluation of Prediction/Forecasting Accuracy: Binary Classification         | Ch 17 (Section 17.1–17.16.5)        |                                       |
+| [17](#section17) | T       | 10/21    | Evaluation of Prediction/Forecasting Accuracy: Binary Classification         | Ch 17 (Section 17.6.6–17.6.8)       |                                       |
+| [18](#section18) | Th      | 10/23    | Evaluation of Prediction/Forecasting Accuracy: Continuous Outcomes           | Ch 17 (Section 17.7–end of chapter) | **Blog article 5 due!**               |
+| [19](#section19) | T       | 10/28    | Calibration Accuracy: Overconfidence Bias                                    | Kahneman & Tversky (1996); Massey & Thaler (2013) |                         |
+| [20](#section20) | Th      | 10/30    | Machine Learning                                                             | Ch 19                               | **Blog article 6 due!**               |
+| [21](#section21) | T       | 11/04    | Mythbusters: Putting Fantasy Football Beliefs/Anecdotes to the Test          | Ch 18; White & Sheldon (2014)       |                                       |
+| [22](#section22) | Th      | 11/06    | Modern Portfolio Theory                                                      | Ch 20                               | **Blog article 7 due!**               |
+| [23](#section23) | T       | 11/11    | Cluster Analysis                                                             | Ch 21                               |                                       |
+| [24](#section24) | Th      | 11/13    | Factor Analysis                                                              | Ch 22                               | **Blog article 8 due!**               |
+| [25](#section25) | T       | 11/18    | Data Reduction: Principal Component Analysis                                 | Ch 23                               |                                       |
+| [26](#section26) | Th      | 11/20    | Simulation and the Monte Carlo Method                                        | Ch 24                               | **Blog article 9 due!**               |
 |                  |         | 11/24–11/27 | **FALL BREAK – NO CLASSES**                                               |                                     |                                       |
-| [27](#section27) | T       | 12/02    | Decision Making in the Context of Uncertainty                                | Ch 26; Larrick et al. (2024)        | **Blog article 10 due!**              |
-| [28](#section28) | Th      | 12/04    | Sports and Cognitive Psychology: Coaching and Risk Aversion                  | Ch 27                               |                                       |
-| [29](#section29) | T       | 12/09    | Sports and Cognitive Psychology: Expert Performance and Automaticity         | Ch 27                               |                                       |
-| [30](#section30) | Th      | 12/11    | Sports and Cognitive Psychology: Psychological Factors in Player Performance | Ch 27                               | **Blog article 11 due!**              |
+| [27](#section27) | T       | 12/02    | Time Series Analysis                                                         | Ch 25                               |                                       |
+| [28](#section28) | Th      | 12/04    | Decision Making in the Context of Uncertainty                                | Ch 26; Larrick et al. (2024)        | **Blog article 10 due!**              |
+| [29](#section29) | T       | 12/09    | Sports and Cognitive Psychology: Coaching and Risk Aversion                  | Ch 27                               |                                       |
+| [30](#section30) | Th      | 12/11    | Sports and Cognitive Psychology: Psychological Factors in Player Performance; Expert Performance and Automaticity | Ch 27 | **Blog article 11 due!**       |
 | Finals Week      |         | TBD (week of 12/15) | **Final Exam**                                                    |                                     |                                       |
 
 # Date and Time of the Final Exam {#finalExam}
