20241017 - class fantasy football league

--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -302,7 +302,7 @@ If you are going to implement a change, I strongly encourage you to discuss with
 I reserve the right to determine whether the "fix", suggestion, or implementation warrants extra credit!
 The extra credit must be completed by the last day of class.
 
-In addition, the winner(s) of the class fantasy football league (whoever leads the league based on total points or win/loss record at the end of the class, i.e., week 14 of the NFL season) will get 1 point extra credit.
+In addition, the winner(s) of the [class fantasy football league](#fantasyFootballLeague) (whoever leads the league based on total points or win/loss record at the end of the class, i.e., week 14 of the NFL season) will get 1 point extra credit.
 No additional extra-credit opportunities are available for this course.
 
 # Tentative Course Outline (exam dates fixed) {#outline}
@@ -366,6 +366,25 @@ There are many course resources available to help you succeed in the class, incl
 - instructor office hours
 - peer study groups
 - Tutor Iowa: https://tutor.uiowa.edu
+
+# Class Fantasy Football League {#fantasyFootballLeague}
+
+As part of the class, we will have a fantasy football league.
+The league will be composed of 10 teams, with approximately 2 students per team.
+That is, you will (likely) be paired with another student in the class to co-manage a team.
+The league will be hosted on [NFL.com](https://fantasy.nfl.com) and will follow [default NFL.com scoring settings](https://support.nfl.com/hc/en-us/articles/4989179237404-Scoring).
+The league will be a head-to-head league, meaning that each week, your team will face one other team, and whoever scores more points wins that week.
+There are no points based on performance (i.e., you will NOT be punished for having a bad team); however, there is an [extra credit opportunity](#extraCredit) for winning the league.
+As the commissioner of the league, I reserve the right to block any trades that that would compromise the integrity of the league.
+Trades will be allowed as long as each team is acting in their team's best interests; that is, "lopsided" trades will be allowed as long as both teams are acting in good faith to improve their own team.
+Trades will not be allowed if they involve collusion, that is, collaboration to cheat or deceive others.
+Examples of collusion include:
+
+- trading players for the purpose of improving the other team's standing in the league (and not your own)
+- trading players, not on bye week, just so an opponent can specifically beat another opponent and then trading back immediately
+- trades that involve outside-of-the-game exchange of goods or services
+- trades that involve a handshake agreement of in-game goods or services
+- trades that cannot be completed in one trade
 
 # Drop Deadline for this Course {#dropDeadline}
 
