--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -375,6 +375,15 @@ That is, you will (likely) be paired with another student in the class to co-man
 The league will be hosted on [NFL.com](https://fantasy.nfl.com) and will follow [default NFL.com scoring settings](https://support.nfl.com/hc/en-us/articles/4989179237404-Scoring).
 The league will be a head-to-head league, meaning that each week, your team will face one other team, and whoever scores more points wins that week.
 There are no points based on performance (i.e., you will NOT be punished for having a bad team); however, there is an [extra credit opportunity](#extraCredit) for winning the league.
+
+The draft will be held during class time.
+The draft will be a "snake" draft, meaning that the order of picks will reverse each round.
+The draft order will be randomly determined.
+
+In conjunction with your co-manager, you will make decisions regarding draft picks, waiver wire pickups/drops, trades, and starting lineups.
+Regardless of your expertise or experience with fantasy football, you are a 50% co-owner of the team.
+That is, <u>you are expected to make all team-related decisions in collaboration with your co-manager</u>, not unilaterally.
+
 As the commissioner of the league, I reserve the right to block any trades that that would compromise the integrity of the league.
 Trades will be allowed as long as each team is acting in their team's best interests; that is, "lopsided" trades will be allowed as long as both teams are acting in good faith to improve their own team.
 Trades will not be allowed if they involve collusion, that is, collaboration to cheat or deceive others.
