--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -253,6 +253,34 @@ If you know that you must be away at the time of an exam for one of these reason
 In order to take a make-up exam, you must provide acceptable documentation to be eligible to take it: including documentation for any report of illness; any other circumstances must be documented by the University of Iowa [Absence Explanation Form](https://clas.uiowa.edu/faculty/student-attendance-and-absences) and must be approved by Professor Petersen.
 <u>In sum, to be eligible for a make-up exam, Professor Petersen must be contacted before the examination whenever possible, and you must send acceptable form of documentation to Professor Petersen</u>.
 
+## Class Fantasy Football League {#fantasyFootballLeague}
+
+As part of the class, we will have a fantasy football league.
+The league will be composed of 10 teams, with approximately 2 students per team.
+That is, you will (likely) be paired with another student in the class to co-manage a team.
+The league will be hosted on [NFL.com](https://fantasy.nfl.com) and will follow [default NFL.com scoring settings](https://support.nfl.com/hc/en-us/articles/4989179237404-Scoring).
+The league will be a head-to-head league, meaning that each week, your team will face one other team, and whoever scores more points wins that week.
+There are no points based on performance (i.e., you will NOT be punished for having a bad team); however, there is an [extra credit opportunity](#extraCredit) for winning the league.
+
+The draft will be held during class time.
+The draft will be a "snake" draft, meaning that the order of picks will reverse each round.
+The draft order will be randomly determined.
+
+In conjunction with your co-manager, you will make decisions regarding draft picks, waiver wire pickups/drops, trades, and starting lineups.
+Regardless of your expertise or experience with fantasy football, you are a 50% co-owner of the team.
+That is, <u>you are expected to make all team-related decisions in collaboration with your co-manager</u>, not unilaterally.
+
+As the commissioner of the league, I reserve the right to block any trades that that would compromise the integrity of the league.
+Trades will be allowed as long as each team is acting in their team's best interests; that is, "lopsided" trades will be allowed as long as both teams are acting in good faith to improve their own team.
+Trades will not be allowed if they involve collusion, that is, collaboration to cheat or deceive others.
+Examples of collusion include:
+
+- trading players for the purpose of improving the other team's standing in the league (and not your own)
+- trading players, not on bye week, just so an opponent can specifically beat another opponent and then trading back immediately
+- trades that involve outside-of-the-game exchange of goods or services
+- trades that involve a handshake agreement of in-game goods or services
+- trades that cannot be completed in one trade
+
 # Grading {#grading}
 
 Final grades will be assigned at the end of semester on the basis of your total percentage of points earned on exams, quizzes, attendance, and writing assignments, as detailed below.
@@ -366,34 +394,6 @@ There are many course resources available to help you succeed in the class, incl
 - instructor office hours
 - peer study groups
 - Tutor Iowa: https://tutor.uiowa.edu
-
-# Class Fantasy Football League {#fantasyFootballLeague}
-
-As part of the class, we will have a fantasy football league.
-The league will be composed of 10 teams, with approximately 2 students per team.
-That is, you will (likely) be paired with another student in the class to co-manage a team.
-The league will be hosted on [NFL.com](https://fantasy.nfl.com) and will follow [default NFL.com scoring settings](https://support.nfl.com/hc/en-us/articles/4989179237404-Scoring).
-The league will be a head-to-head league, meaning that each week, your team will face one other team, and whoever scores more points wins that week.
-There are no points based on performance (i.e., you will NOT be punished for having a bad team); however, there is an [extra credit opportunity](#extraCredit) for winning the league.
-
-The draft will be held during class time.
-The draft will be a "snake" draft, meaning that the order of picks will reverse each round.
-The draft order will be randomly determined.
-
-In conjunction with your co-manager, you will make decisions regarding draft picks, waiver wire pickups/drops, trades, and starting lineups.
-Regardless of your expertise or experience with fantasy football, you are a 50% co-owner of the team.
-That is, <u>you are expected to make all team-related decisions in collaboration with your co-manager</u>, not unilaterally.
-
-As the commissioner of the league, I reserve the right to block any trades that that would compromise the integrity of the league.
-Trades will be allowed as long as each team is acting in their team's best interests; that is, "lopsided" trades will be allowed as long as both teams are acting in good faith to improve their own team.
-Trades will not be allowed if they involve collusion, that is, collaboration to cheat or deceive others.
-Examples of collusion include:
-
-- trading players for the purpose of improving the other team's standing in the league (and not your own)
-- trading players, not on bye week, just so an opponent can specifically beat another opponent and then trading back immediately
-- trades that involve outside-of-the-game exchange of goods or services
-- trades that involve a handshake agreement of in-game goods or services
-- trades that cannot be completed in one trade
 
 # Drop Deadline for this Course {#dropDeadline}
 
