20250106 - course time and location

--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -16,7 +16,7 @@ PSY:3170 – Fantasy Football: Predictive Analytics and Empiricism (Fall 2025)
 
 # Course Meeting Time and Place {#lectureTime}
 
-<mark>INSERT</mark>
+Tuesday and Thursday 11:00 a.m. – 12:15 p.m., 158 Van Allen (VAN)
 
 # Course Website {#website}
 
