--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -195,9 +195,10 @@ Thus, you should give yourself plenty of time to [troubleshoot](#troubleshooting
 
 ### Troubleshooting {#troubleshooting}
 
-If you run into issues related to `R`, `GitHub`, or your code, I encourage you to try one (or more) of the following:
+If you run into issues related to `R`, `GitHub`, `GitHub Pages`, or your code, I encourage you to try one (or more) of the following:
 
 - Perform a Google search for the error/issue
+- Check the [Troubleshooting section](https://isaactpetersen.github.io/QuartoBlogFantasyFootball/posts/quarto-instructions/#sec-troubleshooting) of the course's Quarto Instructions
 - Ask a peer
 - Post on [forums dedicated to `R`](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/getting-started.html#sec-gettingHelpR)
 - Come to office hours
