--- a/devpsylab.Rmd
+++ b/devpsylab.Rmd
@@ -3,9 +3,10 @@ title: "Get Involved in Research with the Developmental Psychopathology Lab!"
 ---
 
 ```{r setup, include = FALSE}
-knitr::opts_chunk$set(echo = TRUE,
-                      error = TRUE,
-                      comment = "")
+knitr::opts_chunk$set(
+  echo = TRUE,
+  error = TRUE,
+  comment = "")
 ```
 
 
