--- a/help.Rmd
+++ b/help.Rmd
@@ -3,9 +3,10 @@ title: "I Think I Might Need Some Help..."
 ---
 
 ```{r setup, include = FALSE}
-knitr::opts_chunk$set(echo = TRUE,
-                      error = TRUE,
-                      comment = "")
+knitr::opts_chunk$set(
+  echo = TRUE,
+  error = TRUE,
+  comment = "")
 ```
 
 # Asking for Help
