--- a/index.Rmd
+++ b/index.Rmd
@@ -3,9 +3,10 @@ title: "Wiki for PSY:3170 – Fantasy Football: Predictive Analytics and Empiric
 ---
 
 ```{r setup, include = FALSE}
-knitr::opts_chunk$set(echo = TRUE,
-                      error = TRUE,
-                      comment = "")
+knitr::opts_chunk$set(
+  echo = TRUE,
+  error = TRUE,
+  comment = "")
 ```
 
 The Class Wiki includes the [course syllabus](syllabus.html) and miscellaneous resources.
