--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -3,9 +3,10 @@ title: "Course Syllabus"
 ---
 
 ```{r setup, include = FALSE}
-knitr::opts_chunk$set(echo = TRUE,
-                      error = TRUE,
-                      comment = "")
+knitr::opts_chunk$set(
+  echo = TRUE,
+  error = TRUE,
+  comment = "")
 ```
 
 Last Updated: `r format(Sys.Date(), "%m/%d/%Y")`
