20250324 - add chapter links

--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -357,36 +357,36 @@ We will have one exam during the semester and one final exam during finals week.
 
 | **Section**      | **Day** | **Date** | **Content**                                                                  | Reading                             | Assignment                            |
 |:-----------------|:--------|:---------|:-----------------------------------------------------------------------------|:------------------------------------|:--------------------------------------|
-| [1](#section1)   | T       | 08/26    | Overview of Class; Overview of Fantasy Football                              | Ch 1–2                              | [CodeAcademy Module 1](https://www.codecademy.com/learn/learn-r) |
-| [2](#section2)   | Th      | 08/28    | Statistical Programming: Using `R` for Statistical Analysis                  | Ch 3                                | [CodeAcademy Modules 2–3](https://www.codecademy.com/learn/learn-r) |
-| [3](#section3)   | T       | 09/02    | Player Evaluation                                                            | Ch 6; Den Hartigh et al. (2018)     | **Set up blog; post welcome article** |
-| [4](#section4)   | Th      | 09/04    | The Draft                                                                    | Ch 7; Lee & Liu (2022)              | [CodeAcademy Modules 5–6](https://www.codecademy.com/learn/learn-r) |
-| [5](#section5)   | T       | 09/09    | Statistical Programming in `R`                                               | Ch 4                                | [CodeAcademy Modules 7–10](https://www.codecademy.com/learn/learn-r) |
-| [6](#section6)   | Th      | 09/11    | Basic Statistics                                                             | Ch 8–9                              | **Blog article 1 due!**               |
-| [7](#section7)   | T       | 09/16    | Data Visualization and Interpretation                                        | Ch 5; Schwabish (2021)              | [CodeAcademy Module 4](https://www.codecademy.com/learn/learn-r) |
-| [8](#section8)   | Th      | 09/18    | Correlation Analysis                                                         | Ch 10; Goodwin & Leech (2006)       | **Blog article 2 due!**               |
-| [9](#section9)   | T       | 09/23    | Multiple Regression                                                          | Ch 11; Osborne & Waters (2002)      |                                       |
-| [10](#section10) | Th      | 09/25    | Mixed Models                                                                 | Ch 12; Brauer & Kurtin (2018)       |                                       |
-| [11](#section11) | T       | 09/30    | Causal Inference                                                             | Ch 13; D'Onofrio et al. (2020)      | **Blog article 3 due!**               |
-| [12](#section12) | Th      | 10/02    | Heuristics and Cognitive Biases in Prediction                                | Ch 14; Tversky & Kahneman (1974)    |                                       |
-| [13](#section13) | T       | 10/07    | Human Judgment vs Actuarial Approaches to Prediction                         | Ch 15; Kahneman (2011), Ch 21 & 22  |                                       |
-| [14](#section14) | Th      | 10/09    | Base Rates                                                                   | Ch 16; Kahneman (2011), Ch 14 & 30  | **Blog article 4 due!**               |
+| [1](#section1)   | T       | 08/26    | Overview of Class; Overview of Fantasy Football                              | Ch [1](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/intro.html)–[2](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/fantasy-football.html) | [CodeAcademy Module 1](https://www.codecademy.com/learn/learn-r) |
+| [2](#section2)   | Th      | 08/28    | Statistical Programming: Using `R` for Statistical Analysis                  | Ch [3](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/getting-started.html) | [CodeAcademy Modules 2–3](https://www.codecademy.com/learn/learn-r) |
+| [3](#section3)   | T       | 09/02    | Player Evaluation                                                            | Ch [6](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/player-evaluation.html); Den Hartigh et al. (2018) | **Set up blog; post welcome article** |
+| [4](#section4)   | Th      | 09/04    | The Draft                                                                    | Ch [7](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/draft.html); Lee & Liu (2022) | [CodeAcademy Modules 5–6](https://www.codecademy.com/learn/learn-r) |
+| [5](#section5)   | T       | 09/09    | Statistical Programming in `R`                                               | Ch [4](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/download-football-data.html) | [CodeAcademy Modules 7–10](https://www.codecademy.com/learn/learn-r) |
+| [6](#section6)   | Th      | 09/11    | Basic Statistics                                                             | Ch [8](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/research-methods.html)–[9](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/basic-statistics.html) | **Blog article 1 due!**               |
+| [7](#section7)   | T       | 09/16    | Data Visualization and Interpretation                                        | Ch [5](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/data-visualization.html); Schwabish (2021) | [CodeAcademy Module 4](https://www.codecademy.com/learn/learn-r) |
+| [8](#section8)   | Th      | 09/18    | Correlation Analysis                                                         | Ch [10](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/correlation.html); Goodwin & Leech (2006) | **Blog article 2 due!**               |
+| [9](#section9)   | T       | 09/23    | Multiple Regression                                                          | Ch [11](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/multiple-regression.html); Osborne & Waters (2002) |                                       |
+| [10](#section10) | Th      | 09/25    | Mixed Models                                                                 | Ch [12](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/mixed-models.html); Brauer & Kurtin (2018) |                                       |
+| [11](#section11) | T       | 09/30    | Causal Inference                                                             | Ch [13](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/causal-inference.html); D'Onofrio et al. (2020) | **Blog article 3 due!**               |
+| [12](#section12) | Th      | 10/02    | Heuristics and Cognitive Biases in Prediction                                | Ch [14](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/cognitive-bias.html); Tversky & Kahneman (1974) |                                       |
+| [13](#section13) | T       | 10/07    | Human Judgment vs Actuarial Approaches to Prediction                         | Ch [15](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/actuarial.html); Kahneman (2011), Ch 21 & 22  |                                       |
+| [14](#section14) | Th      | 10/09    | Base Rates                                                                   | Ch [16](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/base-rates.html); Kahneman (2011), Ch 14 & 30  | **Blog article 4 due!**               |
 | [15](#section15) | T       | 10/14    | **Midterm Exam**                                                             |                                     |                                       |
-| [16](#section16) | Th      | 10/16    | Evaluation of Prediction/Forecasting Accuracy: Binary Classification         | Ch 17 (Section 17.1–17.16.5)        |                                       |
-| [17](#section17) | T       | 10/21    | Evaluation of Prediction/Forecasting Accuracy: Binary Classification         | Ch 17 (Section 17.6.6–17.6.8)       |                                       |
-| [18](#section18) | Th      | 10/23    | Evaluation of Prediction/Forecasting Accuracy: Continuous Outcomes           | Ch 17 (Section 17.7–end of chapter) | **Blog article 5 due!**               |
+| [16](#section16) | Th      | 10/16    | Evaluation of Prediction/Forecasting Accuracy: Binary Classification         | Ch 17 (Section [17.1](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/evaluating-prediction-accuracy.html)–17.16.5)        |                                       |
+| [17](#section17) | T       | 10/21    | Evaluation of Prediction/Forecasting Accuracy: Binary Classification         | Ch 17 (Section [17.6.6](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/evaluating-prediction-accuracy.html#sec-sensitivitySpecificityPPVnpv)–17.6.8)       |                                       |
+| [18](#section18) | Th      | 10/23    | Evaluation of Prediction/Forecasting Accuracy: Continuous Outcomes           | Ch 17 (Section [17.7](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/evaluating-prediction-accuracy.html#sec-thresholdIndependentAccuracy)–end of chapter) | **Blog article 5 due!**               |
 | [19](#section19) | T       | 10/28    | Calibration Accuracy: Overconfidence Bias                                    | Kahneman & Tversky (1996); Massey & Thaler (2013) |                         |
-| [20](#section20) | Th      | 10/30    | Machine Learning                                                             | Ch 19; Ramasubramanian & Singh (2019), Ch 6 | **Blog article 6 due!**       |
-| [21](#section21) | T       | 11/04    | Mythbusters: Putting Fantasy Football Beliefs/Anecdotes to the Test          | Ch 18; White & Sheldon (2014)       |                                       |
-| [22](#section22) | Th      | 11/06    | Modern Portfolio Theory                                                      | Ch 20; Chen (2016)                  | **Blog article 7 due!**               |
-| [23](#section23) | T       | 11/11    | Cluster Analysis                                                             | Ch 21; Everitt et al. (2011)        |                                       |
-| [24](#section24) | Th      | 11/13    | Factor Analysis                                                              | Ch 22; Field et al. (2012), Ch 17   | **Blog article 8 due!**               |
-| [25](#section25) | T       | 11/18    | Data Reduction: Principal Component Analysis                                 | Ch 23                               |                                       |
-| [26](#section26) | Th      | 11/20    | Simulation and the Monte Carlo Method                                        | Ch 24; Sigal & Chalmers (2016)      | **Blog article 9 due!**               |
+| [20](#section20) | Th      | 10/30    | Machine Learning                                                             | Ch [19](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/machine-learning.html); Ramasubramanian & Singh (2019), Ch 6 | **Blog article 6 due!**       |
+| [21](#section21) | T       | 11/04    | Mythbusters: Putting Fantasy Football Beliefs/Anecdotes to the Test          | Ch [18](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/mythbusters.html); White & Sheldon (2014)       |                                       |
+| [22](#section22) | Th      | 11/06    | Modern Portfolio Theory                                                      | Ch [20](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/modern-portfolio-theory.html); Chen (2016) | **Blog article 7 due!**               |
+| [23](#section23) | T       | 11/11    | Cluster Analysis                                                             | Ch [21](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/cluster-analysis.html); Everitt et al. (2011) |                                       |
+| [24](#section24) | Th      | 11/13    | Factor Analysis                                                              | Ch [22](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/factor-analysis.html); Field et al. (2012), Ch 17 | **Blog article 8 due!**               |
+| [25](#section25) | T       | 11/18    | Data Reduction: Principal Component Analysis                                 | Ch [23](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/pca.html) |                                       |
+| [26](#section26) | Th      | 11/20    | Simulation and the Monte Carlo Method                                        | Ch [24](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/simulation.html); Sigal & Chalmers (2016) | **Blog article 9 due!**               |
 |                  |         | 11/24–11/27 | **FALL BREAK – NO CLASSES**                                               |                                     |                                       |
-| [27](#section27) | T       | 12/02    | Time Series Analysis                                                         | Ch 25; Hyndman & Athanasopoulos (2021), Ch 1 (through Section 1.7) |        |
-| [28](#section28) | Th      | 12/04    | Decision Making in the Context of Uncertainty                                | Ch 26; Larrick et al. (2024)        | **Blog article 10 due!**              |
-| [29](#section29) | T       | 12/09    | Sports and Cognitive Psychology: Coaching and Risk Aversion                  | Ch 27; Moskowitz & Werthheim (2012), Ch 3 & 16 |                             |
+| [27](#section27) | T       | 12/02    | Time Series Analysis                                                         | Ch [25](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/time-series-analysis.html); [Hyndman & Athanasopoulos (2021), Ch 1](https://otexts.com/fpp3/intro.html) (through Section 1.7) |        |
+| [28](#section28) | Th      | 12/04    | Decision Making in the Context of Uncertainty                                | Ch [26](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/decision-making.html); Larrick et al. (2024) | **Blog article 10 due!**              |
+| [29](#section29) | T       | 12/09    | Sports and Cognitive Psychology: Coaching and Risk Aversion                  | Ch [27](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/sports-cognitive-psychology.html); Moskowitz & Werthheim (2012), Ch 3 & 16 |                             |
 | [30](#section30) | Th      | 12/11    | Sports and Cognitive Psychology: Psychological Factors in Player Performance; Expert Performance and Automaticity | Ch 27; Moskowitz & Werthheim (2012), Ch 17 | **Blog article 11 due!**       |
 | Finals Week      |         | TBD (week of 12/15) | **Final Exam**                                                    |                                     |                                       |
 
